--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ayush's Portfolio</title>
 </head>
 <body>
-    <h1>This is my Portfolio</h1>
+    <h1>This is Ayush's Portfolio</h1>
     <H2>I am a Web Developer</H2>
     <h3>Projects I have done so far, includes </h3>
     <ol>
